fix clicking issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,14 @@
   background-size: cover;
   background-position: center;
   height: 250px;
+  z-index: 10;
+}
+.content-div-ch {
+  z-index: 0;
+}
+
+.card:hover .content-div-ch {
+  z-index: 20;
 }
 
 /* .content-div:hover {
